# corrupt_mnist

./: .gitignore  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
src/corrupt_mnist/: data.py  evaluate.py  model.py  train.py  visualize.py
