[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "corrupt_mnist"
version = "0.0.1"
description = "my work on corrupt_mnist for DTU MLOps"
authors = [
  { name = "Marius Emil Thornit", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
"ipython>=9.9.0",
"ipykernel>=7.1.0",
"jupyter-client>=8.7.0",
"jupyter-core>=5.9.1",
"debugpy>=1.8.19",
"matplotlib-inline>=0.2.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
